mohammadmahdi push new changes

--- a/app/src/main/res/layout-large/activity_main.xml
+++ b/app/src/main/res/layout-large/activity_main.xml
@@ -32,7 +32,7 @@
                     android:orientation="vertical"
                     android:gravity="right">
 
-                    <com.q20.projectsummer.ui.AutoResizeTextViewWithAfsanehFont
+                    <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithAfsanehFont
                         android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:maxLines="1"
@@ -47,7 +47,7 @@
                         android:orientation="horizontal"
                         android:gravity="right">
 
-                        <com.q20.projectsummer.ui.AutoResizeTextViewWithAfsanehFont
+                        <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithAfsanehFont
                             android:layout_width="110dp"
                             android:layout_height="wrap_content"
                             android:maxLines="1"
@@ -57,7 +57,7 @@
                             android:layout_weight="1.0"
                             android:textDirection="rtl"/>
 
-                        <com.q20.projectsummer.ui.AutoResizeTextViewWithAfsanehFont
+                        <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithAfsanehFont
                             android:layout_width="110dp"
                             android:layout_height="wrap_content"
                             android:maxLines="1"
@@ -102,7 +102,7 @@
                     android:layout_marginLeft="@dimen/main_menu_padding_right_left_layout_large"
                     android:layout_marginRight="@dimen/main_menu_padding_right_left_layout_large"/>
 
-                <com.q20.projectsummer.ui.AutoResizeTextViewWithAfsanehFont
+                <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithAfsanehFont
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
