--- a/app/src/main/res/layout/fragment_register_choose_profile_image.xml
+++ b/app/src/main/res/layout/fragment_register_choose_profile_image.xml
@@ -24,7 +24,7 @@
                 android:src="@drawable/char_m_40" />
         </LinearLayout>
 
-        <com.q20.projectsummer.ui.AutoResizeTextViewWithIrsansFont
+        <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="1"
