--- a/app/src/main/res/layout/activity_find_rival.xml
+++ b/app/src/main/res/layout/activity_find_rival.xml
@@ -76,7 +76,7 @@
                     android:background="@color/colorA17"
                     app:cardCornerRadius="10dp">
 
-                    <com.q20.projectsummer.ui.AutoResizeTextViewWithIrsansFont
+                    <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
                         android:id="@+id/find_rival_find_name_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -130,7 +130,7 @@
                     android:background="@color/colorA17"
                     app:cardCornerRadius="10dp">
 
-                    <com.q20.projectsummer.ui.AutoResizeTextViewWithIrsansFont
+                    <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
                         android:id="@+id/find_chance_rival_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -162,7 +162,7 @@
 
     </LinearLayout>
 
-    <com.q20.projectsummer.ui.AutoResizeTextViewWithIrsansFont
+    <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/friends"
