--- a/app/src/main/res/layout/activity_test_responsivity.xml
+++ b/app/src/main/res/layout/activity_test_responsivity.xml
@@ -6,35 +6,43 @@
     tools:context="com.q20.projectsummer.ui.TestResponsivityActivity">
 
 
-    <com.q20.projectsummer.ResponsiveViews.ResponsiveTextView
-        android:id="@+id/text_test"
-        android:layout_width="40dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginTop="10dp"
-        android:background="@color/colorA1" />
-
     <com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout
-        android:layout_marginLeft="50dp"
-        android:layout_width="200dp"
+        android:id="@+id/shalgham"
+        android:layout_width="match_parent"
         android:layout_height="200dp"
+        android:layout_marginLeft="50dp"
         android:background="@color/colorA6">
 
-        <com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginLeft="100dp"
-            android:background="@color/colorA12">
-
-            <com.q20.projectsummer.ResponsiveViews.ResponsiveTextView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="25dp"
-                android:layout_marginTop="25dp"
-                android:background="@color/colorA5" />
-        </com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>
-
+        <com.q20.projectsummer.ResponsiveViews.ResponsiveTextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            android:background="@color/btn_letter"/>
     </com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>
+
+    <com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="300dp"
+        android:background="@color/transparent">
+
+        <com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp"
+            android:background="@color/colorA9"
+            android:gravity="center">
+
+            <com.q20.projectsummer.ResponsiveViews.ResponsiveImageView
+                android:layout_width="200dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginLeft="20dp"
+                android:background="@color/colorA20"/>
+        </com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>
+    </com.q20.projectsummer.ResponsiveViews.ResponsiveRelativeLayout>
+
 
 
 </RelativeLayout>
