--- a/app/src/main/res/layout/fragment_buy_coins.xml
+++ b/app/src/main/res/layout/fragment_buy_coins.xml
@@ -34,7 +34,7 @@
                     android:layout_width="20dp"
                     android:layout_height="match_parent" />
 
-                <com.q20.projectsummer.ui.AutoResizeTextViewWithIrsansFont
+                <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
@@ -54,7 +54,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="1">
 
-                <com.q20.projectsummer.ui.AutoResizeTextViewWithIrsansFont
+                <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -104,7 +104,7 @@
                 android:layout_width="20dp"
                 android:layout_height="match_parent" />
 
-            <com.q20.projectsummer.ui.AutoResizeTextViewWithIrsansFont
+            <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
@@ -124,7 +124,7 @@
             android:layout_height="0dp"
             android:layout_weight="1">
 
-            <com.q20.projectsummer.ui.AutoResizeTextViewWithIrsansFont
+            <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -174,7 +174,7 @@
                 android:layout_width="20dp"
                 android:layout_height="match_parent" />
 
-            <com.q20.projectsummer.ui.AutoResizeTextViewWithIrsansFont
+            <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
@@ -194,7 +194,7 @@
             android:layout_height="0dp"
             android:layout_weight="1">
 
-            <com.q20.projectsummer.ui.AutoResizeTextViewWithIrsansFont
+            <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -244,7 +244,7 @@
                 android:layout_width="20dp"
                 android:layout_height="match_parent" />
 
-            <com.q20.projectsummer.ui.AutoResizeTextViewWithIrsansFont
+            <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
@@ -264,7 +264,7 @@
             android:layout_height="0dp"
             android:layout_weight="1">
 
-            <com.q20.projectsummer.ui.AutoResizeTextViewWithIrsansFont
+            <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -314,7 +314,7 @@
                 android:layout_width="20dp"
                 android:layout_height="match_parent" />
 
-            <com.q20.projectsummer.ui.AutoResizeTextViewWithIrsansFont
+            <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
@@ -334,7 +334,7 @@
             android:layout_height="0dp"
             android:layout_weight="1">
 
-            <com.q20.projectsummer.ui.AutoResizeTextViewWithIrsansFont
+            <com.q20.projectsummer.ResponsiveViews.AutoResizeTextViewWithIrsansFont
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
