--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,6 +21,7 @@
     <dimen name="dialog_new_game_w_layout_large">300dp</dimen>
 
     <dimen name="text_size_title">20sp</dimen>
+    <dimen name="text_size_information">15sp</dimen>
 
     <dimen name="chart_size">300dp</dimen>
     <dimen name="chart_btn_size">250dp</dimen>
