--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -59,8 +59,8 @@
     <dimen name="keyboard_btn_size">44dp</dimen>
 
     <!--  -->
-    <dimen name="text_size_large">36</dimen>
-    <dimen name="text_size_medium">24</dimen>
-    <dimen name="text_size_small">12</dimen>
+    <dimen name="text_size_large">36sp</dimen>
+    <dimen name="text_size_medium">24sp</dimen>
+    <dimen name="text_size_small">12sp</dimen>
 
 </resources>
