--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:maxLines="1"
-        android:text="نام کاربر"
+        android:text="نام کاربری"
         android:textAlignment="center"
         android:textColor="@color/colorA17"
         android:textSize="@dimen/text_size_large" />
